unicard_types_macro/tests/ui/enum_generic_test.stderr
error: WasmType does not support generics
 --> tests/ui/enum_generic_test.rs:4:13
  |
4 | pub enum Bar<'a, T> {
  |             ^
